# my_mutil_modal

./: .gitignore  README.md  pyproject.toml
baselines/: stfac_paper_results.yaml
configs/: ptbxl_hifuse.yaml  ptbxl_hifuse_adapter_only.yaml  ptbxl_hifuse_ddp_adapt.yaml  ptbxl_hifuse_ddp_finetune.yaml  ptbxl_hifuse_global_bce_ablation.yaml  ptbxl_hifuse_label_query.yaml  ptbxl_hifuse_local_query.yaml  ptbxl_hifuse_residual_adapt.yaml  ptbxl_hifuse_tpa.yaml  ptbxl_hifuse_tpa_bidir.yaml  ptbxl_hifuse_tpa_free.yaml  ptbxl_hifuse_tpa_timebias_only.yaml  ptbxl_stfac_baseline.yaml
configs/baselines/: ptbxl_camv_rnn.yaml  ptbxl_cbmv_cnn.yaml  ptbxl_cbmv_cnn_gray.yaml  ptbxl_stfac_ecgnet.yaml  ptbxl_stfac_ecgnet_gray.yaml
docs/: baseline_reproduction.md  results.md  tpa_method.md
scripts/: evaluate.py  launch_ddp.sh  launch_train.sh  smoke_test.py  train.py
src/my_mutil_modal/data/: __init__.py  ptbxl.py
src/my_mutil_modal/models/: __init__.py  backbones.py  hifuse.py  stfac.py
src/my_mutil_modal/training/: losses.py  metrics.py
src/my_mutil_modal/utils/: config.py  seed.py
